# Croupier

./: .gitignore  CMakeLists.txt  CMakePresets.json  GETTING_STARTED.md  README.md
app/: .editorconfig  App.config  App.xaml  App.xaml.cs  AssemblyInfo.cs  Bingo.cs  BingoCard.cs  BingoGame.cs  BingoGenerator.cs  BingoParser.cs  BingoTile.cs  BingoTrigger.cs  Config.cs  Croupier.UI.csproj  Croupier.UI.sln  Croupier.csproj  Croupier.sln  CroupierPipeServer.cs  CroupierSocketServer.cs  DailySpinChecker.cs  Debug.xaml  Debug.xaml.cs  Directory.Build.props  Disguise.cs  EditBingoWindow.xaml  EditBingoWindow.xaml.cs  EditHotkeys.xaml  EditHotkeys.xaml.cs  EditMapPoolWindow.xaml  EditMapPoolWindow.xaml.cs  EditRulesetWindow.xaml  EditRulesetWindow.xaml.cs  EditSpinWindow.xaml  EditSpinWindow.xaml.cs  GameController.cs  Generator.cs  HitmapsSpinLink.cs  HitmapsWindow.xaml  HitmapsWindow.xaml.cs  Hotkeys.cs  (+38 more)
app/Exceptions/: BingoConfigException.cs  BingoException.cs  BingoGeneratorException.cs  BingoTileConfigException.cs  CroupierException.cs  ParserException.cs  RouletteException.cs  RouletteSpinException.cs
app/GameEvents/: Event.cs
app/Properties/: Resources.Designer.cs  Resources.resx  Settings.Designer.cs  Settings.settings  launchSettings.json
app/Resources/: DarkTheme.xaml
config/: kill-methods.json
config/bingo/: README.md  action.json  area.json  collect.json  disguise.json  group.json  interact.json  pacify.json  sabotage.json
config/bingo/complications/: action.json  disguise.json  evidence.json  kill.json  location.json  opportunity.json  pacification.json  paris-the-showstopper.json  target.json  tool.json
config/bingo/missions/: paris.json  sapienza.json
config/missions/: ambrose-island-shadows-in-the-water.json  bangkok-club-27.json  bangkok-the-source.json  berlin-apex-predator.json  carpathian-mountains-untouchable.json  chongqing-end-of-an-era.json  colorado-freedom-fighters.json  dartmoor-death-in-the-family.json  dubai-on-top-of-the-world.json  haven-island-the-last-resort.json  hawkes-bay-nightcall.json  hokkaido-patient-zero.json  hokkaido-situs-inversus.json  hokkaido-snow-festival.json  ica-freeform-training.json  ica-the-final-test.json  isle-of-sgail-the-ark-society.json  marrakesh-a-gilded-cage.json  marrakesh-a-house-built-on-sand.json  mendoza-the-farewell.json  miami-a-silver-tongue.json  miami-the-finish-line.json  mumbai-chasing-a-ghost.json  mumbai-illusions-of-grandeur.json  new-york-golden-handshake.json  paris-holiday-hoarders.json  paris-the-showstopper.json  santa-fortuna-embrace-of-the-serpent.json  santa-fortuna-three-headed-serpent.json  sapienza-landslide.json  sapienza-the-author.json  sapienza-the-icon.json  sapienza-world-of-tomorrow.json  whittleton-creek-a-bitter-pill.json  whittleton-creek-another-life.json
env/: .gitignore  app.config  config.json
env/actors/: default_target.dds  default_target_portrait.dds
env/config/: kill-methods.json
env/config/bingo/: README.md  collect.json  disguise.json  interact.json  pacify.json  sabotage.json
env/config/missions/: ambrose-island-shadows-in-the-water.json  bangkok-club-27.json  bangkok-the-source.json  berlin-apex-predator.json  carpathian-mountains-untouchable.json  chongqing-end-of-an-era.json  colorado-freedom-fighters.json  dartmoor-death-in-the-family.json  dubai-on-top-of-the-world.json  haven-island-the-last-resort.json  hawkes-bay-nightcall.json  hokkaido-patient-zero.json  hokkaido-situs-inversus.json  hokkaido-snow-festival.json  ica-freeform-training.json  ica-the-final-test.json  isle-of-sgail-the-ark-society.json  marrakesh-a-gilded-cage.json  marrakesh-a-house-built-on-sand.json  mendoza-the-farewell.json  miami-a-silver-tongue.json  miami-the-finish-line.json  mumbai-chasing-a-ghost.json  mumbai-illusions-of-grandeur.json  new-york-golden-handshake.json  paris-holiday-hoarders.json  paris-the-showstopper.json  santa-fortuna-embrace-of-the-serpent.json  santa-fortuna-three-headed-serpent.json  (+6 more)
env/rulesets/: Improv.json  RR15.json  RR16.json  RR17.json  RRWC2023.json  RRWC2024-Experimental.json  RRWC2024.json  RRWC2025.json
mod/: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  cpp.hint  vcpkg.json
mod/cmake/: get-cpm.cmake  setup-zhmmodsdk.cmake
mod/src/: App.cpp  App.h  Bingo.h  Config.cpp  Config.h  Croupier.cpp  Croupier.h  CroupierClient.cpp  CroupierClient.h  CroupierWindow.h  Debug.h  Disguise.h  Enums.h  EventSystem.h  Events.h  Exception.h  HookImpl.h  InputUtil.cpp  InputUtil.h  KillConfirmation.h  KillMethod.h  ProcessUtils.cpp  Roulette.cpp  Roulette.h  RouletteMission.cpp  RouletteMission.h  RouletteRuleset.h  SpinParser.cpp  SpinParser.h  State.cpp  State.h  Target.h  UI.cpp  UI.h  ZHMUtils.cpp  ZHMUtils.h  unac.c  unac.h  util.h
rulesets/: Custom.json  RR11.json  RR12.json  RR14.json  RR15.json  RRWC2023.json  RRWC2024-Experimental.json  RRWC2024.json
src/: Croupier.cpp  Croupier.h  CroupierClient.cpp  CroupierClient.h  CroupierWindow.cpp  CroupierWindow.h  DeclareDPIAware.manifest  Enums.h  Events.h  Randomise.cpp  Randomise.h  Roulette.cpp  Roulette.h  RouletteMission.h  RouletteRuleset.h  util.h
(+8 files in other folders)
